<resources>
    <string name="app_name">PocketCS</string>
    <string name="facebook_app_id">707235632774989</string>
    <string name="cancel_login">Login Cancelled</string>
    <string name="error_login">Error logging in</string>

    <string name="Welcome">Welcome</string>
    <string name="Logout">Logout</string>
    <string name="welcome">Welcome!</string>
    <string name="user_s_first_name">user\'s first name</string>
    <string name="lastname">lastname</string>
    <string name="pocketcslogo">pocketCSLogo</string>
    <string name="userId">user id</string>
    <string name="open">open</string>
    <string name="close">close</string>

    <string name="Community">Community</string>
    <string name="Settings">Settings</string>
    <string name="Quizzes">Quizzes</string>
    <string name="Profile">Profile</string>
    <string name="Home">Home</string>
    <string name="Algorithms">Algorithms</string>
    <string name="DataStructures">Data Structures</string>
    <string name="SoftwareDesignPatterns">Software Design Patterns</string>
    <string name="aboutButton">About</string>
    <string name="About">About</string>
    <string name="title_activity_category_data_display">CategoryDataDisplay</string>
    <string name="AboutMessage">PocketCS was created by computer science students for computer science students who wish to prepare for a technical interview or are simply looking to brush up on their CS fundamentals.</string>
    <string name="AppInfoID">App Info</string>
    <string name="numalgo">numalgo</string>
    <string name="name">name</string>
    <string name="numds">numDS</string>
    <string name="numsw">numSW</string>
</resources>
