<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/Home_menu_item"
    android:title="@string/Home"
        android:icon="@mipmap/ic_home_black_24dp"/>

    <item android:id="@+id/Profile_menu_item"
        android:title="@string/Profile"
        android:icon="@mipmap/ic_person_black_24dp"/>

    <item android:id="@+id/Quizzes_menu_item"
        android:title="@string/Quizzes"
        android:icon="@mipmap/ic_edit_black_24dp"/>

    <item android:id="@+id/Community_menu_item"
        android:title="@string/Community"
        android:icon="@mipmap/ic_public_black_24dp"/>

    <item android:id="@+id/Setting_menu_item"
        android:title="@string/Settings"
        android:icon="@mipmap/ic_settings_black_24dp">

    </item>


</menu>