<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.csumb.moli9479.applicationpocketcs.ProfileActivity"
    android:background="#C5CAE9">


    <com.facebook.login.widget.ProfilePictureView
        android:id="@+id/userProfilePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp">
    </com.facebook.login.widget.ProfilePictureView>

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="152dp" />

    <TextView
        android:id="@+id/AppInfoTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AppInfoID"
        android:layout_below="@+id/userName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/numAlgorithms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numalgo"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/numSoftwareDesign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numsw"
        android:layout_below="@+id/numDS"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/numDS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numds"
        android:layout_below="@+id/numAlgorithms"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
