<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="edu.csumb.moli9479.applicationpocketcs.MainActivity"
    android:id="@+id/drawerLayout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:text="@string/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/WelcomeTitle"
            android:layout_weight="0.00"
            tools:ignore="InefficientWeight,ObsoleteLayoutParam" />

        <TextView
            android:id="@+id/firstname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_s_first_name"

            android:layout_marginTop="18dp"
            android:layout_below="@+id/WelcomeTitle"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            tools:ignore="ObsoleteLayoutParam" />

        <Button
            android:id="@+id/logoutButton"
            android:onClick="logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Logout"
            android:layout_below="@+id/WelcomeTitle"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            tools:ignore="ObsoleteLayoutParam" />

        <com.facebook.login.widget.ProfilePictureView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="105dp"
            android:layout_below="@+id/logoutButton"
            android:layout_centerHorizontal="true"
            tools:ignore="ObsoleteLayoutParam">

        </com.facebook.login.widget.ProfilePictureView>

        <TextView
            android:id="@+id/userId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userId"
            android:layout_below="@+id/logoutButton"
            android:layout_alignRight="@+id/WelcomeTitle"
            android:layout_alignEnd="@+id/WelcomeTitle"
            tools:ignore="ObsoleteLayoutParam" />


    </LinearLayout>

    <android.support.design.widget.NavigationView

        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:menu="@menu/nav_menu"
        app:headerLayout="@layout/nav_header"
        app:itemBackground="@drawable/pressed_gray"
        android:layout_gravity="start">

    </android.support.design.widget.NavigationView>


</android.support.v4.widget.DrawerLayout>





